--- a/base/deploy.yaml
+++ b/base/deploy.yaml
@@ -13,12 +13,8 @@ spec:
         app: kargo-demo
     spec:
       containers:
-      - name: nginx 
-        image: public.ecr.aws/nginx/nginx:placeholder
-        volumeMounts:
-        - name: content
-          mountPath: /usr/share/nginx/html
-          readOnly: true
+      - name: alpine
+        image: alpine
       volumes:
       - name: content
         configMap:
